Update tmux and zsh config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,95 +1,38 @@
-##############################
-# GLOBAL CONFIGURATION
-##############################
-# set correct term
-set -g default-terminal screen-256color
+## set the default TERM
+set -g default-terminal "screen-256color"
+set-window-option -g mode-keys vi
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+set -s escape-time 1
+set -g base-index 1
+setw -g pane-base-index 1
+set -g history-limit 10000
 
-# vi keys
-set-window-option -ag mode-keys "vi"
+## Mouse settings
+setw -g mode-mouse off
 
-# listen for activity on all windows
-set -g bell-action any
+## Some keyboard shortcuts
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind C-t setw synchronize-panes \; display "Synchronizing panes"
 
-##############################
-# STATUS BAR CONFIGURATION
-##############################
+## Pane selection
+bind k selectp -U # switch to panel Up
+bind j selectp -D # switch to panel Down 
+bind h selectp -L # switch to panel Left
+bind l selectp -R # switch to panel Right
 
-#### COLOUR (Solarized dark)
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour130 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour33 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour196 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour46 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour196 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour20 #blue
-set-option -g display-panes-colour colour196 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour40 #green
-
-#### COLOUR (Solarized light)
-
-# default statusbar colors
-set-option -g status-bg colour231 #base2
-set-option -g status-fg colour130 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour180 #base00
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour196 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour231 #base2
-set-option -g pane-active-border-fg colour051 #base1
-
-# message text
-set-option -g message-bg colour231 #base2
-set-option -g message-fg colour196 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour20 #blue
-set-option -g display-panes-colour colour196 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour40 #green
-
-#### COLOUR (Solarized 256)
+## Pane resizing
+bind -r K resize-pane -U 5
+bind -r J resize-pane -D 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
 
 # default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
+## Colors
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
