--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,8 @@ setw -g mode-mouse off
 
 ## Some keyboard shortcuts
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
 bind C-t setw synchronize-panes \; display "Synchronizing panes"
+bind P pipe-pane -o "cat >> /tmp/tmux-$USER-#W-#I-#P.log" \; display "Toggled logging to /tmp/tmux-$USER-#W-#I-#P.log"
 
 ## Pane selection
 bind k selectp -U # switch to panel Up
@@ -31,6 +31,10 @@ bind -r L resize-pane -R 5
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
+
+# Alerts
+set-window-option -g monitor-activity on
+set-option -g visual-activity on
 
 ## Colors
 # default window title colors
