Disable activity monitor

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,8 +33,7 @@ set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
 # Alerts
-set-window-option -g monitor-activity on
-set-option -g visual-activity on
+set-window-option -g monitor-activity off
 
 ## Colors
 # default window title colors
