Update tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,12 +8,21 @@ setw -g pane-base-index 1
 set -g history-limit 10000
 
 ## Mouse settings
-setw -g mode-mouse off
+setw -g mode-mouse on
 
 ## Some keyboard shortcuts
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-t setw synchronize-panes \; display "Synchronizing panes"
 bind P pipe-pane -o "cat >> /tmp/tmux-$USER-#W-#I-#P.log" \; display "Toggled logging to /tmp/tmux-$USER-#W-#I-#P.log"
+
+# Use vi mode copy/pasting
+unbind [
+bind Escape copy-mode
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-bufffer"
 
 ## Pane selection
 bind k selectp -U # switch to panel Up
