--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ setw -g pane-base-index 1
 set -g history-limit 10000
 
 ## Mouse settings
-setw -g mode-mouse on
+setw -g mode-mouse off
 
 ## Some keyboard shortcuts
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
@@ -16,8 +16,6 @@ bind C-t setw synchronize-panes \; display "Synchronizing panes"
 bind P pipe-pane -o "cat >> /tmp/tmux-$USER-#W-#I-#P.log" \; display "Toggled logging to /tmp/tmux-$USER-#W-#I-#P.log"
 
 # Use vi mode copy/pasting
-unbind [
-bind Escape copy-mode
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
