--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,6 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g history-limit 10000
 
-## Mouse settings
-setw -g mode-mouse off
-
 ## Some keyboard shortcuts
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-t setw synchronize-panes \; display "Synchronizing panes"
@@ -41,6 +38,15 @@ set-option -g status-attr default
 
 # Alerts
 set-window-option -g monitor-activity off
+
+## TMUX Plugin manager
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
 ## Colors
 # default window title colors
