--- a/30-kensington.conf
+++ b/30-kensington.conf
@@ -5,4 +5,5 @@ Section "InputClass"
     Driver		"evdev"
     MatchIsPointer	"on"
     Option		"Emulate3Buttons"	"true"
+    Option        "MiddleEmulation"     "true"
 EndSection
