--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,20 @@
 [alias]
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
-	co = checkout
-	ci = commit
-	st = status
-	br = branch
-	hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
-	type = cat-file -t
-	dump = cat-file -p
-	d = difftool
+    lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+    co = checkout
+    ci = commit
+    st = status
+    br = branch
+    hist = log --pretty=format:'%h %ad | %s%d [%an]' --graph --date=short
+    type = cat-file -t
+    dump = cat-file -p
+    d = difftool
+    d = branch -d
+    D = branch -D
+    vd = difftool --tool=vimdiff -y
+    md = difftool --tool=meld -y
 [user]
-	name = Vlad Balmos
-	email =
+    name = Vlad Balmos
+    email =
 [diff]
     external = git-diff-wrapper
 [merge]
