Update work settings

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,16 +5,13 @@ set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WIND
 set -s escape-time 1
 set -g base-index 1
 setw -g pane-base-index 1
-set -g history-limit 10000
+set -g history-limit 100000
 
 
 ## Some keyboard shortcuts
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind C-t setw synchronize-panes \; display "Synchronizing panes"
 bind P pipe-pane -o "cat >> /tmp/tmux-$USER-#W-#I-#P.log" \; display "Toggled logging to /tmp/tmux-$USER-#W-#I-#P.log"
-
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-bufffer"
 
 ## Pane selection
 bind k selectp -U # switch to panel Up
@@ -28,33 +25,14 @@ bind -r J resize-pane -D 5
 bind -r H resize-pane -L 5
 bind -r L resize-pane -R 5
 
-# default statusbar colors
+## default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 
-# Alerts
+## Alerts
 set-window-option -g monitor-activity off
 
-## TMUX Plugin manager
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 ## Colors
-# default window title colors
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-
-# message text
-
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
 set-option -g display-panes-colour colour166 #orange
